# Settlers-DNG-Patches

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  S2-DNG-Patches.aps
data/: cursor.cur  d3d9.ini
data/CE/: S2DNG.CT  S2DNG_file loader.CT  notes.txt  s2DNG_2.CT  s2DNG_mov_filter.CT  s2DNG_spr.ods
data/music/: Maintheme (Cover).aup3
source/: CMakeLists.txt  Config.cpp  Config.h  Helper.cpp  Helper.h  Lobby.cpp  Lobby.h  MainPatch.cpp  MainPatch.h  MainPatchASM.cpp  MainPatchASM.h  ZoomPatch.cpp  ZoomPatch.h  d3d9.cpp  d3d9.def  d3d9.h  f_d3d9.h  pch.h
source/Helper/: Helper.cpp  Helper.h  Logger.h
source/bridge/: bridge.go  go.mod  metal.go
source/httplib/: httplib.h
src/: ZoomPatch.cpp  ZoomPatch.h  d3d9.cpp  d3d9.h
